--- a/Pet/Properties/Settings.settings
+++ b/Pet/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="defaultName" Type="System.String" Scope="User">
       <Value Profile="(Default)">Rex</Value>
     </Setting>
+    <Setting Name="dailyComments" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
