--- a/Pet/Pet.csproj
+++ b/Pet/Pet.csproj
@@ -56,6 +56,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Animal.cs" />
     <Compile Include="UserControls\UserControl_MainMenu.xaml.cs">
       <DependentUpon>UserControl_MainMenu.xaml</DependentUpon>
     </Compile>
